syntax = "proto3";

package producto;

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc ListProduct(Empty) returns (ProductList);
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}